# routes/users.js
@@ -5,8 +5,19 @@ var router = express.Router();
 router.get('/', async (req, res, next) => {
   try {
     const {Users} = req.db;
+    const username = req.query.username;
+    // req.body, req.params (variables dans le path), req.get(headers)
+
     const users = await Users.findAll();
-    return res.send(users);
+
+    let filteredUsers = users;
+    if (username) {
+      filteredUsers = users.filter(u => {
+        return u.username === username;
+      })
+    }
+
+    return res.status(200).send(filteredUsers);
   } catch (err) {
     next(err);
   }
